<resources>
    <string name="app_name">Udacity</string>
    <string name="_650_555_5555">650-555-5555</string>
    <string name="_2465_latham_st_mountain_view_ca_94043">2465 Latham St Mountain View, CA 94043</string>
    <string name="www_udacity_com">www.udacity.com</string>
    <string name="udacity">Udacity</string>
    <string name="to_create">To create</string>
    <string name="teaching_you">Teaching you</string>
</resources>
