<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/udacity_selfdriving_car_course"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart"
        android:padding="@dimen/padding_car"
        android:alpha="0.85"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/rsz_21realcar"
        android:layout_alignParentTop="true"
        android:scaleType="fitEnd"
        android:padding="@dimen/padding_realcar"
        android:alpha="0.85"
        />
    <ImageView
        android:layout_width="@dimen/width_loc2"
        android:layout_height="@dimen/height_loc2"
        android:src="@drawable/loc2"
        android:scaleType="fitCenter"
        android:layout_marginLeft="@dimen/marginLeft_loc2"
        android:layout_marginTop="@dimen/marginTop_loc2"
        />
    <ImageView
        android:layout_width="@dimen/width_phoneicon"
        android:layout_height="@dimen/height_phoneicon"
        android:src="@drawable/phone"
        android:scaleType="fitCenter"
        android:layout_marginLeft="@dimen/marginLeft_phoneicon"
        android:layout_marginTop="@dimen/marginTop_phoneicon"
        />
    <ImageView
        android:layout_width="@dimen/width_web2"
        android:layout_height="@dimen/height_web2"
        android:src="@drawable/web2"
        android:scaleType="fitCenter"
        android:layout_marginLeft="@dimen/marginLeft_web2"
        android:layout_marginTop="@dimen/marginTop_web2"
        />
    <TextView
        android:layout_width="@dimen/width_phone"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft_phone"
        android:layout_marginTop="@dimen/marginTop_phone"
        android:fontFamily="sans-serif"
        android:padding="@dimen/padding_phone"
        android:text="@string/_650_555_5555"
        android:textColorLink="@android:color/white"
        android:textSize="@dimen/textsize_phone"
        android:autoLink="phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft_udacity"
        android:layout_marginTop="@dimen/marginTop_udacity"
        android:fontFamily="sans-serif"
        android:text="@string/udacity"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/udacity"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dancing_script"
        android:padding="@dimen/padding_Teaching"
        android:text="@string/teaching_you"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_create"
        android:paddingRight="@dimen/paddingRight_Create"
        android:paddingBottom="@dimen/paddingBottom_Create"
        android:textColor="@android:color/black"
        android:fontFamily="@font/dancing_script"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    <TextView
        android:layout_width="@dimen/width_address"
        android:layout_height="wrap_content"
        android:drawablePadding="50dp"
        android:layout_marginLeft="@dimen/marginLeft_address"
        android:layout_marginTop="@dimen/marginTop_address"
        android:fontFamily="sans-serif"
        android:padding="@dimen/padding_address"
        android:text="@string/_2465_latham_st_mountain_view_ca_94043"
        android:textColorLink="@android:color/white"
        android:textSize="@dimen/textSize_address"
        android:autoLink="map"
        />
    <TextView
        android:layout_width="@dimen/width_web"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft_web"
        android:layout_marginTop="@dimen/marginTop_web"
        android:fontFamily="sans-serif"
        android:padding="@dimen/padding_web"
        android:text="@string/www_udacity_com"
        android:textColorLink="@android:color/white"
        android:textSize="@dimen/textSize_web"
        android:autoLink="web"
        />

</RelativeLayout>